# ftc_framework

./: CMakeLists.txt  README.md  build.common.gradle  build.gradle  import-summary.txt  settings.gradle
FtcRobotController/: build.gradle
FtcRobotController/src/main/: AndroidManifest.xml
FtcRobotController/src/main/cpp/: native-lib.cpp
FtcRobotController/src/main/java/ftc/vision/: ImageProcess.java  ImageUtil.java  MatContour.java  SimpleFrameGrabber.java
FtcRobotController/src/main/java/org/firstinspires/ftc/robotcontroller/internal/: BaseActivity.java  FtcRobotControllerActivity.java
FtcRobotController/src/main/res/layout/: activity_ftc_controller.xml
FtcRobotController/src/main/res/xml/: device_filter.xml
TeamCode/: build.gradle
TeamCode/src/main/java/org/burlingame/ftc/lib/: Hardware.java  Scheduler.java  Subsystem.java
TeamCode/src/main/java/org/burlingame/ftc/lib/OI/: BooleanSupplier.java  BooleanWrapper.java  Button.java  DoubleSupplier.java  GamepadWrapper.java  OI.java  Stick.java
TeamCode/src/main/java/org/burlingame/ftc/lib/commands/: Command.java  CommandDelegate.java  CommandParent.java  Parallel.java  ParallelGroup.java  Scheduler.java  SequenceGroup.java  Sequential.java
TeamCode/src/main/java/org/burlingame/ftc/lib/opmodes/: AutoBaseOpMode.java  TeleopBaseOpMode.java
TeamCode/src/main/java/org/burlingame/ftc/lib/path_planning/: CombinedPath.java  Hold.java  IntegralPath.java  LinearDerivativePath.java  MotionPath.java  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
libuvccamera-debug/: build.gradle  libuvccamera-debug.aar
openCVLibrary310/: build.gradle
openCVLibrary310/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
openCVLibrary343/: build.gradle
usbCameraCommon-debug/: build.gradle  usbCameraCommon-debug.aar
(+94 files in other folders)
